# raytracer-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: projectile_test.py
src/raytracer/: __about__.py  __init__.py  canvas.py  matrices.py  tuples.py
tests/: test_canvas.py  test_matrices.py  test_tuples.py
